--- a/KnowGo/styles.css
+++ b/KnowGo/styles.css
@@ -582,7 +582,28 @@ a{
     flex-direction: column;
     font-size: .9em;
 }
+.back-button {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
 
+.back-button {
+    background: #FFC107;
+    color: #1A8373;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1em;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.back-button :hover {
+    background: #1A8373;
+    color: #fff;
+    transform: scale(1.1);
+}
 
 /* @font-face{
     font-family: "Unbounded"; 
