--- a/KnowGo/styles.css
+++ b/KnowGo/styles.css
@@ -583,9 +583,178 @@ a{
     font-size: .9em;
 }
 
+.test-link{
+    display: flex;
+    justify-content: center;
+    margin-top: -90px;
+}
+
+.test{
+    background: #1A8373;
+    color: #ffc107;;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1.1em;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: 0.3s ease;
+    margin-top: 50px;
+
+}
+.test:hover{
+    transform: scale(1.1);
+    color: #1A8373;
+    background-color: #ffc107;
+}
+
+.progress-container{
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    width: 700px;
+    
+}
+
+.progress-container::before{
+    content: "";
+    background-color: #FFC107;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    height: 4px;
+    width: 100%;
+    z-index: -1;
+    transition: .4 ease;
+}
+
+.progress{
+    background-color: #FFC107;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    height: 4px;
+    width: 0%;
+    z-index: -1;
+    transition: .4s ease;
+}
+
+.circle{
+    background-color: white;
+    border-radius: 50%;
+    height: 50PX;
+    width: 50px;
+    border: 3px solid #FFC107;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.4 ease;
+}
+
+.sad{
+    color: rgb(126, 18, 18);
+}
+.happy{
+    color: #388E3C;
+}
+
+.test-form-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    color: #156d60;
+}
+
+.test-form {
+    background-color: #ffffff;
+    padding: 20px 40px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 100%;
+    max-width: 600px;
+}
+
+.test-form h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    color: #156d60;
+}
+
+.question {
+    margin-bottom: 20px;
+}
+
+.question h3 {
+    margin-bottom: 10px;
+}
+
+label {
+    align-items: start;
+    display: flex; /* Включаем блочный формат для ровного расположения */
+    text-align: left;
+}
+label>input{
+    width: 20px;
+}
+
+input[type="radio"] {
+    margin-right: 10px; /* Отступ между радио-кнопкой и текстом */
+    vertical-align: top;
+}
+
+#submit {
+    background-color: #156d60;
+    color: #FFC107;
+    border: none;
+    padding: 15px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    cursor: pointer;
+    transition: 0.3s ease;
+
+}
+
+
+    
+label input[type="radio"] {
+    margin-right: 10px;
+    appearance: none; /* Убираем стандартное оформление радио-кнопки */
+    width: 16px;
+    height: 16px;
+    border: 2px solid #FFC107; /* Цвет обводки */
+    border-radius: 50%; /* Делаем кнопку круглой */
+    outline: none;
+    cursor: pointer;
+    transition: background-color 0.3s, border-color 0.3s;
+}
+
+label input[type="radio"]:checked {
+    background-color: #1A8373; /* Цвет внутри радиокнопки при выборе */
+    border-color: #1A8373;
+ }
+
+
+
+#submit:hover{
+    transform: scale(1.1);
+    color: #1A8373;
+    background-color: #ffc107;
+}
 
 /* @font-face{
     font-family: "Unbounded"; 
     src: url("../fonts/RalewayRegular.ttf") format("truetype"); 
     font-style: normal; 
     font-weight: normal; }*/
+
+    
